// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingSpinner renders correctly when loading 1`] = `
<div
  className="loading-spinner show"
>
  <div
    className="lds-ring"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`LoadingSpinner renders correctly when not loading 1`] = `
<div
  className="loading-spinner "
>
  <div
    className="lds-ring"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;
